# energy-py

./: .gitignore  .travis.yml  LICENSE.txt  Makefile  PITCHME.css  PITCHME.md  PITCHME.yaml  README.md  agents.py  core.py  core_flex.py  dev-requirements.txt  environments.py  outputs.py  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.py
OLD/: core.py  outputs.py  readme.md
agents/: Double_Q_Learner.py  Q_Learner.py
assets/: Q_test.csv  high_level.py  library.py  time_series.csv  utils.py  value_functions.py
benchmarks/: battery.json  lunar.json  nem-battery.json  pendulum.json  random-battery.json
energy_py/: __init__.py  readme.md
energypy/: __init__.py  checkpoint.py  datasets.py  init.py  json_util.py  main.py  networks.py  registry.py  sampling.py  train.py  utils.py
environments/: base_env.py  env_CHP.py  env_FLEX.py  library.py
examples/: battery.py  battery_arbitrage_experiments.py  bayesian-hyperparameter-optimization.py  dataset.py
experiments/: __init__.py  dqn_battery.py  dqn_expt.py  random_expt.py  reinforce_battery.py  reinforce_expt.py  reinforce_gym.py
notebooks/: Gaussian_distribution_TensorFlow.ipynb  convolution_draft.ipynb  convolution_energy_py.ipynb  discounted returns calc.ipynb  experiences_list.ipynb  experiment_results.ipynb  flex_results_analysis.ipynb  memory more efficient.ipynb  memory_olympics.ipynb  naive_battery_results.ipynb  processor_check.ipynb  processors_dev.ipynb  q-learning check.ipynb  readme.txt  softmax_policy.ipynb  space check v2.ipynb  space_check.ipynb  spaces check after discrete changes.ipynb  tf slicing last layer.ipynb  tf_variable_sharing.ipynb
poc/: battery.py  cartpole-ppo.py  first.py
tests/: battery.json  test_attention.py  test_attention_integration.py  test_battery.py  test_battery_frequency.py  test_battery_losses.py  test_buffer.py  test_checkpoint.py  test_dataset.py  test_experiment.py  test_fancy_memory_save.py  test_lunar.py  test_make_env.py  test_readme.py  test_sac.py  test_sample_prices.py  test_system.py
(+423 files in other folders)
